# pytorch-lightning

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: main.yaml
config/model/: image-net.yaml
docs/src/: index.md  process.md  train_model.md  utils.md
logs/image_net_v1/version_0/: events.out.tfevents.1715685778.MW300RE.88667.0
logs/image_net_v1/version_1/: events.out.tfevents.1715686005.MW300RE.89427.0
logs/image_net_v1/version_2/: events.out.tfevents.1715686298.MW300RE.90741.0
models/: ConvBlock.py  FcBlock.py  ImageNet.py
src/: __init__.py  make_dataset.py  process.py  train_model.py  utils.py
