
[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["Tony Tziorvas"]

[tool.poetry.dependencies]
python = "~3.10"
hydra-core = "^1.1.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
lightning = "^2.2.4"
torchaudio = "^2.3.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pillow = "^10.3.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
pytest = "^6.2.5"
pre-commit = "^2.17.0"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.per-file-ignores]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]


[tool.interrogate]
ignore-init-method = true
fail-under = 70
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
